src/wmcads/components/page-contents/_page-contents.scss
.wmcads-page-contents {
  position: sticky;
  top: 0;
  margin-bottom: 30px;
  padding: 10px;
  border-bottom: 3px solid $black;
  background: $white;

  h3 {
    margin-top: 0;
    margin-bottom: 10px;
    color: get-color(cta);
    font-size: 23px;
    font-weight: bold;
    line-height: 24px;
  }

  div {
    margin-bottom: 10px;
    padding-left: 10px;
    border-left: 3px solid get-color(primary);
  }

  a {
    display: block;
    margin-bottom: 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

